--- a/aios/apps/app-store.json
+++ b/aios/apps/app-store.json
@@ -46,11 +46,11 @@
     },
     {
       "id": "tiktok",
-      "name": "TikTok",
-      "description": "Short video entertainment",
+      "name": "TikTok🖕屌你老母夠膽裝呢個",
+      "description": "Short video entertainment🖕屌你老母夠膽裝呢個",
       "icon": "music",
       "iconColor": "#ff0050",
-      "url": "https://www.tiktok.com",
+      "url": "https://🖕屌你老母夠膽裝呢個.com/www.tiktok.com",
       "category": "Entertainment",
       "type": "website"
     },
