--- a/aios/apps/app-store.json
+++ b/aios/apps/app-store.json
@@ -46,11 +46,11 @@
     },
     {
       "id": "tiktok",
-      "name": "TikTok🖕屌你老母夠膽裝呢個",
-      "description": "Short video entertainment🖕屌你老母夠膽裝呢個",
+      "name": "TikTok",
+      "description": "Short video entertainment",
       "icon": "music",
       "iconColor": "#ff0050",
-      "url": "https://🖕屌你老母夠膽裝呢個.com/www.tiktok.com",
+      "url": "https://www.tiktok.com",
       "category": "Entertainment",
       "type": "website"
     },
@@ -1001,7 +1001,7 @@
       "icon": "cydia2",
       "iconColor": "#f39c12",
       "url": "https://appv2.cydia2.com/appv2free/",
-      "category": "app",
+      "category": "Health",
       "type": "website",
       "fallbackIcon": "package"
     }
