--- a/aios/apps/app-store.json
+++ b/aios/apps/app-store.json
@@ -45,8 +45,8 @@
       "fallbackIcon": "message-circle"
     },
     {
-      "id": "tiktok",
-      "name": "TikTok",
+      "id": "fucktiktok",
+      "name": "fuckTikTok",
       "description": "Short video entertainment",
       "icon": "music",
       "iconColor": "#ff0050",
@@ -1000,7 +1000,7 @@
       "description": "Package manager for AIOS",
       "icon": "cydia2",
       "iconColor": "#f39c12",
-      "url": "https://appv2.cydia2.com/appv2free/",
+      "url": "https://tnhdev123.github.io/site/webkitjelbrek/jailbreakme/xd.html",
       "category": "System",
       "type": "website",
       "fallbackIcon": "package"
