--- a/aios/apps/app-store.json
+++ b/aios/apps/app-store.json
@@ -999,7 +999,7 @@
       "id": "catfafa",
       "name": "🐱🐱🐱",
       "description": "🐱Cat Game.🐱",
-      "icon": "https://tnttc2.github.io/iog.github.io/🐱🐱🐱.png",
+      "icon": "https://tnttc2.github.io/iog.github.io/🐱🐱🐱.PNG",
       "url" :"https://tnttc2.github.io/iog.github.io/🐱🐱🐱.html",
       "category": "Game",
       "type": "website"
@@ -1008,7 +1008,7 @@
       "id": "tnte",
       "name": "TNTExplorer",
       "description": "A Web Explorer.",
-      "icon": "https://tnttc2.github.io/iog.github.io/TNTExplorer/icon.png",
+      "icon": "https://tnttc2.github.io/iog.github.io/TNTExplorer/icon.jpeg",
       "url" :"https://tnttc2.github.io/iog.github.io/TNTExplorer/latest.html",
       "category": "Web",
       "type": "website"
