--- a/aios/apps/app-store.json
+++ b/aios/apps/app-store.json
@@ -986,7 +986,7 @@
     },
     {
       "id": "debugger",
-      "name": "JailbreakMe",
+      "name": "AiOS Debugger",
       "description": "Package manager for AIOS",
       "icon": "https://theapplewiki.com/images/applewiki/archive/d/d2/20110715013252%21Cydia_icon.png",
       "iconColor": "#f39c12",
