--- a/aios/apps/app-store.json
+++ b/aios/apps/app-store.json
@@ -146,7 +146,7 @@
       "id": "deezer",
       "name": "Deezer",
       "description": "Music streaming",
-      "icon": "https://e-cdns-files.dzcdn.net/cache/images/common/favicon/apple-touch-icon.png",
+      "icon": "music",
       "iconColor": "#feaa2d",
       "url": "https://www.deezer.com",
       "category": "Music",
@@ -156,7 +156,7 @@
       "id": "discord",
       "name": "Discord",
       "description": "Chat for communities and friends",
-      "icon": "https://cdn.prod.website-files.com/6257adef93867e3d8405897d/625944ad351abd29e5833534_1024.png",
+      "icon": "gamepad-2",
       "iconColor": "#5865f2",
       "url": "https://discord.com/app",
       "category": "Social",
@@ -166,7 +166,7 @@
       "id": "disney-plus",
       "name": "Disney+",
       "description": "Disney streaming service",
-      "icon": "https://static-assets.bamgrid.com/product/disneyplus/images/share-default.14fadd993578b9916f855cebafad7199.png",
+      "icon": "star",
       "iconColor": "#113ccf",
       "url": "https://www.disneyplus.com",
       "category": "Entertainment",
@@ -176,7 +176,7 @@
       "id": "dropbox",
       "name": "Dropbox",
       "description": "Cloud storage",
-      "icon": "https://aem.dropbox.com/cms/content/dam/dropbox/www/en-us/branding/dropbox-logo-glyph-blue.png",
+      "icon": "cloud",
       "iconColor": "#0061ff",
       "url": "https://www.dropbox.com",
       "category": "Productivity",
@@ -196,7 +196,7 @@
       "id": "ebay",
       "name": "eBay",
       "description": "Online auctions and shopping",
-      "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/EBay_logo.svg/1024px-EBay_logo.svg.png",
+      "icon": "shopping-bag",
       "iconColor": "#e53238",
       "url": "https://www.ebay.com",
       "category": "Shopping",
@@ -217,7 +217,7 @@
       "id": "etsy",
       "name": "Etsy",
       "description": "Handmade and vintage items",
-      "icon": "https://www.etsy.com/apple-touch-icon.png",
+      "icon": "heart",
       "iconColor": "#f1641e",
       "url": "https://www.etsy.com",
       "category": "Shopping",
@@ -238,7 +238,7 @@
       "id": "figma",
       "name": "Figma",
       "description": "Collaborative design tool",
-      "icon": "https://upload.wikimedia.org/wikipedia/commons/3/33/Figma-logo.svg",
+      "icon": "layers",
       "iconColor": "#f24e1e",
       "url": "https://www.figma.com",
       "category": "Design",
@@ -248,7 +248,7 @@
       "id": "github",
       "name": "GitHub",
       "description": "Code collaboration platform",
-      "icon": "https://github.githubassets.com/favicons/favicon.svg",
+      "icon": "code",
       "iconColor": "#333333",
       "url": "https://github.com",
       "category": "Productivity",
@@ -279,7 +279,7 @@
       "id": "google-docs",
       "name": "Google Docs",
       "description": "Online document editor",
-      "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Google_Docs_logo_%282014-2020%29.svg/1024px-Google_Docs_logo_%282014-2020%29.svg.png",
+      "icon": "file-text",
       "iconColor": "#4285f4",
       "url": "https://docs.google.com",
       "category": "Productivity",
@@ -289,7 +289,7 @@
       "id": "google-drive",
       "name": "Google Drive",
       "description": "Cloud storage and sync",
-      "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Google_Drive_icon_%282020%29.svg/1024px-Google_Drive_icon_%282020%29.svg.png",
+      "icon": "cloud",
       "iconColor": "#4285f4",
       "url": "https://drive.google.com",
       "category": "Productivity",
@@ -330,7 +330,7 @@
       "id": "hbo-max",
       "name": "HBO Max",
       "description": "Premium entertainment",
-      "icon": "https://www.hbomax.com/apple-touch-icon.png",
+      "icon": "play",
       "iconColor": "#673ab7",
       "url": "https://www.hbomax.com",
       "category": "Entertainment",
@@ -340,7 +340,7 @@
       "id": "hulu",
       "name": "Hulu",
       "description": "TV shows and movies",
-      "icon": "https://www.hulu.com/apple-touch-icon.png",
+      "icon": "tv",
       "iconColor": "#1ce783",
       "url": "https://www.hulu.com",
       "category": "Entertainment",
@@ -350,7 +350,7 @@
       "id": "icloud",
       "name": "iCloud",
       "description": "Apple cloud services",
-      "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/ICloud_logo.svg/1024px-ICloud_logo.svg.png",
+      "icon": "cloud",
       "iconColor": "#007aff",
       "url": "https://www.icloud.com",
       "category": "Productivity",
@@ -371,7 +371,7 @@
       "id": "linkedin",
       "name": "LinkedIn",
       "description": "Professional networking",
-      "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/LinkedIn_icon.svg/1024px-LinkedIn_icon.svg.png",
+      "icon": "briefcase",
       "iconColor": "#0077b5",
       "url": "https://www.linkedin.com",
       "category": "Business",
@@ -381,7 +381,7 @@
       "id": "medium",
       "name": "Medium",
       "description": "Social publishing platform",
-      "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Medium_logo_Monogram.svg/1024px-Medium_logo_Monogram.svg.png",
+      "icon": "edit",
       "iconColor": "#00ab6c",
       "url": "https://medium.com",
       "category": "News",
@@ -413,7 +413,7 @@
       "id": "monday",
       "name": "Monday.com",
       "description": "Work management platform",
-      "icon": "https://monday.com/apple-touch-icon.png",
+      "icon": "calendar",
       "iconColor": "#ff3d71",
       "url": "https://monday.com",
       "category": "Productivity",
@@ -433,7 +433,7 @@
       "id": "notion",
       "name": "Notion",
       "description": "All-in-one workspace",
-      "icon": "https://www.notion.so/images/logo-ios.png",
+      "icon": "notebook",
       "iconColor": "#000000",
       "url": "https://www.notion.so",
       "category": "Productivity",
@@ -443,7 +443,7 @@
       "id": "onedrive",
       "name": "OneDrive",
       "description": "Microsoft cloud storage",
-      "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Microsoft_OneDrive_logo.svg/1024px-Microsoft_OneDrive_logo.svg.png",
+      "icon": "cloud",
       "iconColor": "#0078d4",
       "url": "https://onedrive.live.com",
       "category": "Productivity",
@@ -475,7 +475,7 @@
       "id": "pandora",
       "name": "Pandora",
       "description": "Personalized music",
-      "icon": "https://www.pandora.com/apple-touch-icon.png",
+      "icon": "radio",
       "iconColor": "#005483",
       "url": "https://www.pandora.com",
       "category": "Music",
@@ -485,7 +485,7 @@
       "id": "paramount",
       "name": "Paramount+",
       "description": "Movies and TV",
-      "icon": "https://www.paramountplus.com/apple-touch-icon.png",
+      "icon": "mountain",
       "iconColor": "#0064ff",
       "url": "https://www.paramountplus.com",
       "category": "Entertainment",
@@ -495,7 +495,7 @@
       "id": "paypal",
       "name": "PayPal",
       "description": "Send and request money securely",
-      "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/PayPal.svg/1024px-PayPal.svg.png",
+      "icon": "credit-card",
       "iconColor": "#003087",
       "url": "https://www.paypal.com",
       "category": "Finance",
@@ -505,7 +505,7 @@
       "id": "peacock",
       "name": "Peacock",
       "description": "NBCUniversal streaming",
-      "icon": "https://www.peacocktv.com/apple-touch-icon.png",
+      "icon": "feather",
       "iconColor": "#0054a5",
       "url": "https://www.peacocktv.com",
       "category": "Entertainment",
@@ -526,7 +526,7 @@
       "id": "pinterest",
       "name": "Pinterest",
       "description": "Discover ideas for your interests",
-      "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Pinterest-logo.png/1024px-Pinterest-logo.png",
+      "icon": "bookmark",
       "iconColor": "#bd081c",
       "url": "https://www.pinterest.com",
       "category": "Lifestyle",
@@ -536,7 +536,7 @@
       "id": "prime-video",
       "name": "Prime Video",
       "description": "Amazon's streaming service",
-      "icon": "https://www.primevideo.com/apple-touch-icon.png",
+      "icon": "play",
       "iconColor": "#00a8e1",
       "url": "https://www.primevideo.com",
       "category": "Entertainment",
@@ -557,7 +557,7 @@
       "id": "reddit",
       "name": "Reddit",
       "description": "The front page of the internet",
-      "icon": "https://www.redditstatic.com/desktop2x/img/favicon/apple-touch-icon-180x180.png",
+      "icon": "circle",
       "iconColor": "#ff4500",
       "url": "https://www.reddit.com",
       "category": "News",
@@ -567,7 +567,7 @@
       "id": "reuters",
       "name": "Reuters",
       "description": "Breaking international news",
-      "icon": "https://www.reuters.com/pf/resources/images/reuters/apple-touch-icon.png",
+      "icon": "newspaper",
       "iconColor": "#ff8000",
       "url": "https://www.reuters.com",
       "category": "News",
@@ -577,7 +577,7 @@
       "id": "signal",
       "name": "Signal",
       "description": "Private messaging",
-      "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Signal-Logo.svg/1024px-Signal-Logo.svg.png",
+      "icon": "shield",
       "iconColor": "#3a76f0",
       "url": "https://signal.org",
       "category": "Social",
@@ -587,7 +587,7 @@
       "id": "slack",
       "name": "Slack",
       "description": "Team communication",
-      "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Slack_icon_2019.svg/1024px-Slack_icon_2019.svg.png",
+      "icon": "hash",
       "iconColor": "#4a154b",
       "url": "https://slack.com",
       "category": "Business",
@@ -597,7 +597,7 @@
       "id": "snapchat",
       "name": "Snapchat",
       "description": "Camera and messaging app",
-      "icon": "https://www.snapchat.com/apple-touch-icon.png",
+      "icon": "camera",
       "iconColor": "#fffc00",
       "url": "https://web.snapchat.com",
       "category": "Social",
@@ -607,7 +607,7 @@
       "id": "soundcloud",
       "name": "SoundCloud",
       "description": "Audio platform",
-      "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Antu_soundcloud.svg/1024px-Antu_soundcloud.svg.png",
+      "icon": "headphones",
       "iconColor": "#ff5500",
       "url": "https://soundcloud.com",
       "category": "Music",
@@ -627,7 +627,7 @@
       "id": "target",
       "name": "Target",
       "description": "Department store",
-      "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Target_logo.svg/1024px-Target_logo.svg.png",
+      "icon": "target",
       "iconColor": "#cc0000",
       "url": "https://www.target.com",
       "category": "Shopping",
@@ -637,7 +637,7 @@
       "id": "telegram",
       "name": "Telegram",
       "description": "Fast and secure messaging",
-      "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Telegram_logo.svg/1024px-Telegram_logo.svg.png",
+      "icon": "message-circle",
       "iconColor": "#0088cc",
       "url": "https://web.telegram.org",
       "category": "Social",
@@ -647,7 +647,7 @@
       "id": "washpost",
       "name": "The Washington Post",
       "description": "Politics and world news",
-      "icon": "https://www.washingtonpost.com/apple-touch-icon.png",
+      "icon": "newspaper",
       "iconColor": "#326891",
       "url": "https://www.washingtonpost.com",
       "category": "News",
@@ -657,7 +657,7 @@
       "id": "nytimes",
       "name": "The New York Times",
       "description": "Independent journalism",
-      "icon": "https://www.nytimes.com/vi-assets/apple-touch-icon-3199ca20942ee41804abc609ae913bb3.png",
+      "icon": "newspaper",
       "iconColor": "#000000",
       "url": "https://www.nytimes.com",
       "category": "News",
@@ -667,7 +667,7 @@
       "id": "guardian",
       "name": "The Guardian",
       "description": "Independent news",
-      "icon": "https://assets.guim.co.uk/images/favicons/023dafadbf5ef53e0865e4ba8a876931/apple-touch-icon-180x180.png",
+      "icon": "newspaper",
       "iconColor": "#052962",
       "url": "https://www.theguardian.com",
       "category": "News",
@@ -709,7 +709,7 @@
       "id": "trello",
       "name": "Trello",
       "description": "Project management",
-      "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Trello-logo.svg/1024px-Trello-logo.svg.png",
+      "icon": "grid",
       "iconColor": "#0079bf",
       "url": "https://trello.com",
       "category": "Productivity",
@@ -719,7 +719,7 @@
       "id": "twitch",
       "name": "Twitch",
       "description": "Live gaming and entertainment",
-      "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Twitch_Glitch_Logo_Purple.svg/1024px-Twitch_Glitch_Logo_Purple.svg.png",
+      "icon": "tv",
       "iconColor": "#9146ff",
       "url": "https://www.twitch.tv",
       "category": "Entertainment",
@@ -740,7 +740,7 @@
       "id": "uber",
       "name": "Uber",
       "description": "Request a ride",
-      "icon": "https://www.uber-assets.com/image/upload/q_auto:eco,c_fill,w_180,h_180/v1555543261/ux/logo/apple-touch-icon.png",
+      "icon": "car",
       "iconColor": "#000000",
       "url": "https://m.uber.com",
       "category": "Travel",
@@ -760,7 +760,7 @@
       "id": "webmd",
       "name": "WebMD",
       "description": "Health information",
-      "icon": "https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/logos/apple-touch-icon.png",
+      "icon": "plus-circle",
       "iconColor": "#377bb5",
       "url": "https://www.webmd.com",
       "category": "Health",
@@ -802,7 +802,7 @@
       "id": "zoom",
       "name": "Zoom",
       "description": "Video conferencing",
-      "icon": "https://st1.zoom.us/zoom.ico",
+      "icon": "video",
       "iconColor": "#2d8cff",
       "url": "https://zoom.us",
       "category": "Business",
