--- a/source/apps.json
+++ b/source/apps.json
@@ -11,7 +11,7 @@
   ],
   "apps": [
     {
-      "name": "My Example App",
+      "name": "3.5mmBack! 3",
       "bundleIdentifier": "tnhdev123.3.5mmback.troll",
       "marketplaceID": "",
       "developerName": "TNH",
@@ -23,7 +23,7 @@
       "screenshots": [],
       "versions": [
         {
-          "downloadURL": "https://www.dropbox.com/scl/fi/qz7doru30mqacuw43v7g3/3.5mmBack.ipa?rlkey=hhg7ffhvo5zyw6hg8xnrl6wrc&st=i3ywr0vc&raw=1",
+          "downloadURL": "https://www.dropbox.com/scl/fi/iddq4osm561wushe7bcla/3.5mmBack-3.ipa?rlkey=ix4n7y4nrew6rvc58u8rbil1m&st=4q929x3i&raw=1",
           "size": 821000000,
           "version": "1.0.0",
           "buildVersion": "",
